# queens

./: .gitignore  IGNORE_dev_notebook.ipynb  README.md  cli.py  data_funcs.py  main.py  mapping.py  process.py  pyproject.toml  render.yaml  render_start.sh  utils.py
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: IGNORE_dev_notebook-checkpoint.ipynb
api/: api.py  app.py
config/: config.ini  etl_config.json  etl_config.lson  schema.json  settings.py  templates.json  urls.json
core/: read_write.py  utils.py  web_scraping.py
data/templates/: dukes_ch_1.xlsx  dukes_ch_2.xlsx  dukes_ch_3.xlsx  dukes_ch_4.xlsx  dukes_ch_5.xlsx  dukes_ch_6.xlsx  dukes_ch_7.xlsx  process.py
docs/: api.md  architecture.md  cli.md  configuration.md  filters.md  library.md  troubleshooting.md  versioning.md
etl/: bootstrap.py  input_output.py  process.py  table_specs.py  transformations.py  validation.py
examples/: api_example_usage.ipynb  library_walkthrough.ipynb  live_api_demo.ipynb
queens/: __init__.py  cli.py  facade.py  settings.py
queens/api/: app.py
queens/config/: etl_config.json  schema.json  templates.json
queens/config/templates/: dukes_ch_1.xlsx  dukes_ch_2.xlsx  dukes_ch_3.xlsx  dukes_ch_4.xlsx  dukes_ch_5.xlsx  dukes_ch_6.xlsx  dukes_ch_7.xlsx
queens/core/: read_write.py  utils.py  web_scraping.py
queens/etl/: bootstrap.py  process.py  transformations.py  validation.py
sql/: sql_utils.py
src/: read_write.py  utils.py
tests/: test_read_and_wrangle_wb.py  test_transformations.py  test_validation.py
